--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,51 @@
   <name>ejercicioJars</name>
   <description>Creacion de librerias y uso</description>
   <packaging>jar</packaging>
+  
+  <dependencies>
+  	<dependency>
+  		 <groupId>com.curso.java.miguel</groupId>
+         <artifactId>JarSaludo</artifactId>
+         <version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
+  
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.curso.java.miguel.ejecutable.Ejecutable</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>com.curso.java.miguel.ejecutable.Ejecutable</mainClass>
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin> 
+         
+    </plugins>
+</build>
+
 </project>
